# src/app/api/models/warehouse.ts
@@ -3,6 +3,9 @@ export interface ResGetApiWarehouseInList {
   items: Array<{goods_name: string, id: number, price: number, in_num: number, in_type: 0 | 1 | 2, in_code: string, in_date: string, goods_id: number}>;
   total: number;
 }
+export interface ResGetApiWarehouseInDownload {
+  url: string;
+}
 export interface ResGetApiWarehouseOutBatch {
   items: Array<{price: number, out_num: number, in_type: number, in_code: string, in_date: string}>;
   total: number;
@@ -17,6 +20,9 @@ export interface ResGetApiWarehouseOutList {
   items: Array<{goods_id: number, goods_name: string, out_num: number, out_code: string, out_date: string, id: number, out_cost: number}>;
   total: number;
 }
+export interface ResGetApiWarehouseOutDownload {
+  url: string;
+}
 export interface ResGetApiWarehouseList {
   items: Array<{goods_id: number, id: number, goods_name: string, cost: number, num: number}>;
   total: number;
@@ -28,4 +34,7 @@ export interface ResGetApiWarehouseBatch {
 export interface ResGetApiWarehouseHistory {
   items: Array<{goods_id: number, goods_name: string, operation: 0 | 1 | 2 | 3, date: string, num: number}>;
   total: number;
+}
+export interface ResGetApiWarehouseHistoryDownload {
+  url: string;
 }
